@@ -25,12 +25,12 @@
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
 
-    <annotations.version>17.0.0</annotations.version>
-    <assertj.version>3.14.0</assertj.version>
-    <junit.version>5.6.0-M1</junit.version>
-    <junit.platform.version>1.6.0-M1</junit.platform.version>
-    <log4j.version>2.12.1</log4j.version>
-    <mockito.version>3.1.0</mockito.version>
+    <annotations.version>19.0.0</annotations.version>
+    <assertj.version>3.16.1</assertj.version>
+    <junit.version>5.7.0-M1</junit.version>
+    <junit.platform.version>1.7.0-M1</junit.platform.version>
+    <log4j.version>2.13.3</log4j.version>
+    <mockito.version>3.4.0</mockito.version>
     <slf4j.version>2.0.0-alpha1</slf4j.version>
 
     <asm.version>8.0.1</asm.version>
@@ -135,7 +135,7 @@
           <configuration>
             <sourceEncoding>utf-8</sourceEncoding>
             <minimumTokens>100</minimumTokens>
-            <targetJdk>11</targetJdk>
+            <targetJdk>12</targetJdk>
           </configuration>
         </plugin>
         <plugin>
@@ -196,7 +196,6 @@
           </goals>
           <configuration>
             <forkCount>0</forkCount>
-            <argLine>--enable-preview</argLine>
           </configuration>
         </plugin>
         <plugin>
